:lipstick:Feat centralizar conteúdo menu page

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -29,9 +29,10 @@
 
   <!-- Main content -->
   <div class="main">
-    <h2>Bem-vindo ao MindEasy</h2>
-    <p>Escolha uma opção abaixo:</p>
-
+    <div class="mensagemInicial">
+      <h2 class="bemVindo">Bem-vindo ao MindEasy</h2>
+      <p class="opcao">Escolha uma opção abaixo:</p>
+    </div>
     <div class="card-grid">
       <div class="card" onclick="location.href='agenda.html'">
         <i class="fa-regular fa-calendar"></i>
