Adiciona integração de videochamada, html, css, js  e carregamento de pacientes via Axios

--- a/src/main/resources/templates/perfilTerapeuta.html
+++ b/src/main/resources/templates/perfilTerapeuta.html
@@ -14,12 +14,12 @@
   <div class="sidebar">
     <div class="brand">MindEasy</div>
     <ul>
-      <li><a href="agenda.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
+      <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
       <li><a href="cadastroCliente.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
-      <li><a href="cadastroTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
+      <li><a href="cadastro.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
       <li><a href="perfil-servicos.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
-      <li><a href="terapeuta-chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-      <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+      <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
+      <li><a href="videoChamada.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
     </ul>
     <div class="logout">
       <a class="d-block text-center text-danger fw-bold" href="index.html">
