--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style/menu.css" rel="stylesheet">
+  <!-- Ícones do Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 <body>
@@ -13,11 +15,11 @@
   <div class="sidebar">
     <div class="brand">MindEasy</div>
     <ul>
-      <li><a href="agenda.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
-      <li><a href="cadastroCliente.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
-      <li><a href="cadastroTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
-      <li><a href="perfil-servicos.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
-      <li><a href="terapeuta-chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
+      <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
+      <li><a href="cadastro.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
+      <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
+      <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
+      <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
       <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
     </ul>
     <div class="logout">
