Adicionando a tela de login e cadastro do paciente no projeto

--- a/src/main/resources/templates/cadastroCliente.html
+++ b/src/main/resources/templates/cadastroCliente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de Terapeuta – MindEasy Animada</title>
+    <title>Tela de Paciente – MindEasy Animada</title>
     
     <link rel="stylesheet" href="../style/cadastro.css">
     
@@ -22,8 +22,6 @@
                     <option value="FEMININO">Feminino</option>
                     <option value="OUTRO">Outro</option>
                 </select>
-                <input type="text" id="especialidade" placeholder="Especialidade" required />
-                <input type="text" id="crm" placeholder="CRM/Registro" required />
                 <input type="email" id="emailCadastro" placeholder="Email" required />
                 <input type="tel" id="telefone" placeholder="Telefone" required />
                 <input type="password" id="senhaCadastro" placeholder="Senha" required />
@@ -34,7 +32,7 @@
 
         <div class="form-container sign-in-container">
             <form id="formLogin">
-                <h1>Login Terapeuta</h1>
+                <h1>Login Paciente</h1>
                 
                 <span>ou use sua conta</span>
                 <input type="email" id="emailLogin" placeholder="Email" required />
@@ -52,7 +50,7 @@
                     <button class="ghost" id="signIn">Login</button>
                 </div>
                 <div class="overlay-panel overlay-right">
-                    <h1>Olá, Terapeuta!</h1>
+                    <h1>Olá, seja bem vindo!</h1>
                     <p>Insira seus dados e comece sua jornada conosco</p>
                     <button class="ghost" id="signUp">Cadastrar</button>
                 </div>
