--- a/src/main/resources/templates/calendario.html
+++ b/src/main/resources/templates/calendario.html
@@ -17,21 +17,23 @@
 </head>
 <body>
 
-  <!-- Sidebar -->
   <div class="sidebar">
-    <div class="brand">MindEasy</div>
-    <ul>
-      <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
-      <li><a href="cadastro.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
-      <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
-      <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
-      <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
-      <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
-    </ul>
-    <div class="logout">
-      <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Sair</a>
-    </div>
+  <div class="brand">MindEasy</div>
+  <ul>
+    <li><a href="calendario.html"><i class="fa-regular fa-calendar"></i> Agenda</a></li>
+    <li><a href="cadastro.html"><i class="fa-solid fa-user"></i> Cliente</a></li>
+    <li><a href="perfilTerapeuta.html"><i class="fa-solid fa-user-doctor"></i> Terapeuta</a></li>
+    <li><a href="menu.html"><i class="fa-regular fa-star"></i> Serviços</a></li>
+    <li><a href="chat.html"><i class="fa-regular fa-comment"></i> Chat</a></li>
+    <li><a href="terapeuta-video.html"><i class="fa-solid fa-video"></i> Videochamada</a></li>
+  </ul>
+  <div class="logout">
+    <a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Sair</a>
   </div>
+</div>
+
+<div id="sidebar-handle"><i class="fa-solid fa-bars"></i></div>
+
 
   <!-- Conteúdo principal -->
   <div class="main-content">
