--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -29,6 +29,8 @@
     </div>
   </div>
 
+  <div id="sidebar-handle">&#x25B6;</div> <!-- seta -->
+
   <!-- Main content -->
   <div class="main">
     <h2>Bem-vindo ao MindEasy</h2>
@@ -54,8 +56,6 @@
     </div>
   </div>
 
-  <div id="sidebar-handle">&#x25B6;</div> <!-- seta -->
-
-  <script src="../script/menu.js"></script>
+  <script src="../static/menu.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
