--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -33,6 +33,8 @@
     </div>
   </div>
 
+  <div id="sidebar-handle">&#x25B6;</div> 
+
   <!-- ===== CONTAINER PRINCIPAL (Sidebar + Lista de contatos + Chat) ===== -->
   <div class="main-container">
 
@@ -164,6 +166,7 @@
   setInterval(carregarMensagens, 5000); // atualiza a cada 5 segundos
   carregarMensagens(); // carrega assim que entra
 </script>
+<script src="../static/menu.js"></script>
 </body>
 </html>
 
