--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -30,6 +30,8 @@
     </div>
   </div>
 
+  <div id="sidebar-handle">&#x25B6;</div>
+
   <!-- ===== CONTAINER PRINCIPAL (Sidebar + Lista de contatos + Chat) ===== -->
   <div class="main-container">
     <div class="wrap">
@@ -50,6 +52,8 @@
         </svg>
     </div>
 </div>
+
+<script src="../static/menu.js"></script>
 
 <script>
     // Dados (poderia vir do backend)
